initial javadoc updates for excluding packages